--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Large spiders lurk near my toes
+    Large spiders lurk near my toes! Whatever shall I do?
 </body>
 </html>
